--- a/package.json
+++ b/package.json
@@ -10,15 +10,24 @@
     "type": "git",
     "url": "clear"
   },
-  "author": "",
+  "author": "By Shashi Raj",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "parcel": "^2.13.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router": "^7.1.1",
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
-    "process": "^0.11.10"
-  }
+    "autoprefixer": "^10.4.20",
+    "parcel": "^2.13.3",
+    "postcss": "^8.4.49",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.17"
+  },
+  "main": "index.js",
+  "description": "Foody Moody",
+  "keywords": [
+    "FoodApp"
+  ]
 }
