--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.1",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "parcel": "^2.13.3",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.0",
     "process": "^0.11.10",
     "tailwindcss": "^3.4.17"
   },
