--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
@@ -38,7 +38,8 @@
     "postcss": "^8.5.0",
     "process": "^0.11.10",
     "tailwindcss": "^3.4.17",
-    "text-encoding": "^0.7.0"
+    "text-encoding": "^0.7.0",
+    "whatwg-fetch": "^3.6.20"
   },
   "main": "index.js",
   "description": "Foody Moody",
