--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Foody Moody",
   "author": "Shashi Raj",
   "license": "ISC",
-  "keywords": ["FoodApp"],
+  "keywords": [
+    "FoodApp"
+  ],
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
@@ -19,6 +21,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
